--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.18",
+    "@ngx-translate/http-loader": "0.0.2",
     "bootstrap": "^4.0.0-alpha.6",
     "concurrently": "^3.1.0",
     "core-js": "^2.4.1",
