--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "concurrently \"node mockServer.js\" \"ng serve --proxy-config proxy.config.json\"",
+    "start": "concurrently \"node server/mockServer.js\" \"ng serve --proxy-config proxy.config.json\"",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
