--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^3.3.1",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.18",
     "@ngx-translate/http-loader": "0.0.2",
+    "angular2-cookie": "^1.2.6",
     "bootstrap": "^4.0.0-alpha.6",
     "concurrently": "^3.1.0",
     "core-js": "^2.4.1",
